clusters/danto/apps/cloud/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-db
spec:
  selector:
    app: cloud-db
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
