clusters/danto/apps/cloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud
spec:
  selector:
    app: cloud
  ports:
    - name: http
      port: 80
      targetPort: http
