clusters/danto/apps/cloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: cloud.x43.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud
                port:
                  name: http
  tls:
    - hosts:
        - cloud.x43.io
